--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
  config:
    import: optional:file:.env[.properties]
  datasource:
-   url: ${DATASOURCE_URL:jdbc:mysql://localhost:3307/tripplanner_db}
-   username: ${MYSQL_USER:root}
-   password: ${MYSQL_PASSWORD:root}
+   url: ${DATASOURCE_URL}
+   username: ${MYSQL_USER}
+   password: ${MYSQL_PASSWORD}
  jpa:
    show-sql: true
    open-in-view: false
