.yml config added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
  application:
   name: Accommodation-Marketplace
+ config:
+   import: optional:file:.env[.properties]
  datasource:
    url: ${DATASOURCE_URL}
    username: ${MYSQL_USER}
